# video-understanding-mcp

./: .gitignore  README.md  pyproject.toml  smithery.json
src/video_mcp_standard/: __init__.py  server.py
